# drizzle

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  flake.nix
drizzle/: CMakeLists.txt
drizzle/driz/: main.cpp
drizzle/driz/app/: argparse.cpp  argparse.hpp  inspector.cpp  inspector.hpp  intro_layer.cpp  intro_layer.hpp  sim_layer.cpp  sim_layer.hpp  visualization.cpp  visualization.hpp
drizzle/driz/core/: alias.hpp  core.cpp  core.hpp  dimension.hpp  glm.hpp  math.hpp
drizzle/driz/simulation/: kernel.cpp  kernel.hpp  lookup.cpp  lookup.hpp  settings.hpp  solver.cpp  solver.hpp
flu-sim/: CMakeLists.txt
flu-sim/flu/: alias.hpp  layer.cpp  layer.hpp  main.cpp
flu-sim/flu/app/: argparse.cpp  argparse.hpp  inspector.cpp  inspector.hpp  intro_layer.cpp  intro_layer.hpp  layer.cpp  layer.hpp  sim_layer.cpp  sim_layer.hpp  visualization.cpp  visualization.hpp
flu-sim/flu/core/: alias.hpp  core.cpp  core.hpp  dimension.hpp  glm.hpp
flu-sim/flu/simulation/: kernel.cpp  kernel.hpp  lookup.cpp  lookup.hpp  settings.hpp  solver.cpp  solver.hpp
flu-sim/flu/solver/: kernel.cpp  kernel.hpp  particle.cpp  particle.hpp  solver.cpp  solver.hpp
profiling/: profile.py
setup/: build.ini  setup.py  unix-install.sh  unix-uninstall.sh  win-install.bat  win-uninstall.bat
